Fixed paragraph contrast issue load component

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -22,5 +22,6 @@
   }
   p {
     font-size: 1.8rem;
+    @include var(color, -secondary-font-color);
   }
 }
